# Night-Fall

./: .env.example  .gitignore  LICENSE  NIGHT_FALL_PROMPT_APPEND.md  README.md  pyproject.toml
docker/: docker-compose.nightfall.override.yml
night_fall/: __init__.py  config.py  extension.py  imagery.py  launcher.py  metadata.py  ombre_adapter.py  selection.py  storage.py  surfacing.py  tool.py  writer.py
night_fall/prompts/: dream_writer.md  imagery_extraction.md
scripts/: install_local.py
tests/: test_attempt_threshold.py  test_auto_surface.py  test_e2e_integration.py  test_eligibility.py  test_extension_and_tool.py  test_imagery_writer.py  test_no_surface_when_ineligible.py  test_one_shot_lifecycle.py  test_selection.py  test_storage.py  test_surface_score.py  test_surfacing.py
