[project]
name = "night-fall"
version = "0.1.0"
description = "Runtime Night Fall extension for a user-provided Ombre Brain installation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Shuhui Yang", email = "u7662582@anu.edu.au" },
]
keywords = ["mcp", "ombre-brain", "memory", "dream", "claude"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/shuhuiyang/Night-Fall"
Issues = "https://github.com/shuhuiyang/Night-Fall/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["night_fall*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
